# deep-thinker

./: CLAUDE.md  README.md  history.csv
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: config.py  graph.py  main.py  state.py
backend/app/agents/: planner.py  researcher.py  summarizer.py  synthesizer.py
backend/app/models/: schemas.py
backend/app/services/: llm.py
backend/app/tools/: tavily_search.py
frontend/: Dockerfile  README.md  next.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentPipeline.tsx  AgentTraceTree.tsx  CommandBar.tsx  LogStream.tsx  ReportViewer.tsx  SessionDrawer.tsx  SourcesPanel.tsx  StatusBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  scroll-area.tsx  sheet.tsx  tabs.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useResearchStore.ts
frontend/src/types/: events.ts
